welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: ')' expected but ';' found.
                    {lignemotif1(Color.red;Color:blue)
                                          ^PatternPicture:2: error: ';' expected but ')' found.
                    {lignemotif1(Color.red;Color:blue)
                                                     ^PatternPicture:27: error: ')' expected but ';' found.
def lignemotif1(a:Color;b:Color) {for (j<-1 to 2) {motif1(a);motif2(b)}}  
                       ^PatternPicture:27: error: ';' expected but ')' found.
def lignemotif1(a:Color;b:Color) {for (j<-1 to 2) {motif1(a);motif2(b)}}  
                               ^